Alignment fixed for 320*568 screens

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ left: 0
 	color:#fff;
 	font-size:16px;
 	width: 90px;
-	margin-top:120px;
+	margin-top:70px;
+	left:50%;
 	text-transform: capitalize;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 }
@@ -162,7 +163,6 @@ left: 0
 }
 .verticaline{
 	 border-left: thick solid #fff;
-	
 	
 }
 /*about*/
